# UAV_masters_thesis

./: .gitignore  CMakeLists.txt  masters.tar.xz  package.xml  plugins.xml
config/: Dynrec.cfg  default.yaml  masters.yaml  tf_connector.yaml  trajectories.yaml  trajectories_2.yaml  trajectories_91.yaml
include/: Masters.h
launch/: masters.launch
logs/: dkf_0.1_0.0_8_0.4_0.0_0.0_0.0_sc2  dkf_0.1_0.0_8_0.4_0.0_0.0_0.0_sc3  dkf_0.1_0.0_8_0.4_0.0_0.0_0.0_sc4-t  dkf_0.1_0.0_8_0.4_0.0_0.0_0.0_sc4-t2  dkf_0.1_0.0_8_0.4_0.0_0.0_0.0_sc4-test  dkf_0.5_0.0_8_0.4_0.0_0.0_0.0_sc1  dkf_0.5_0.0_8_0.4_0.0_0.0_0.0_sc4  dkft_0.1_0.0_8_0.4_0.0_0.0_0.0_sc2  dkft_0.1_0.0_8_0.4_0.0_0.0_0.0_sc3  dkft_0.1_0.0_8_0.4_0.0_0.0_0.0_sc4-t  dkft_0.1_0.0_8_0.4_0.0_0.0_0.0_sc4-t2  dkft_0.5_0.0_8_0.4_0.0_0.0_0.0_sc1  dkft_0.5_0.0_8_0.4_0.0_0.0_0.0_sc4  logs_vis.py  plkf_0.1_0.0_8_0.4_0.0_0.0_0.0_sc2  plkf_0.1_0.0_8_0.4_0.0_0.0_0.0_sc3  plkf_0.1_0.0_8_0.4_0.0_0.0_0.0_sc4-t2  plkf_0.1_0.0_8_0.4_0.0_0.0_0.0_sc4-t3  plkf_0.1_0.0_8_0.4_0.0_0.0_0.0_sc4-test  plkf_0.5_0.0_8_0.4_0.0_0.0_0.0_sc1  plkf_0.5_0.0_8_0.4_0.0_0.0_0.0_sc4  plkft_0.1_0.0_8_0.4_0.0_0.0_0.0_sc2  plkft_0.1_0.0_8_0.4_0.0_0.0_0.0_sc3  plkft_0.1_0.0_8_0.4_0.0_0.0_0.0_sc4-test  plkft_0.5_0.0_8_0.4_0.0_0.0_0.0_sc1  plkft_0.5_0.0_8_0.4_0.0_0.0_0.0_sc4  postproc_logs.py  svd-dynamic_0.5_0.0_10_0.4_0.0_0.0_0.0_sc1  svd-dynamic_0.5_0.0_20_0.4_0.0_0.0_0.0_sc1  svd-dynamic_0.5_0.0_4_0.4_0.0_0.0_0.0_sc1  svd-dynamic_0.5_0.0_6_0.4_0.0_0.0_0.0_sc1  svd-dynamic_0.5_0.0_8_0.4_0.0_0.0_0.0_sc1  svd-static_0.5_0.0_10_0.4_0.0_0.0_0.0_sc1  svd-static_0.5_0.0_20_0.4_0.0_0.0_0.0_sc1  svd-static_0.5_0.0_4_0.4_0.0_0.0_0.0_sc1  svd-static_0.5_0.0_6_0.4_0.0_0.0_0.0_sc1  svd-static_0.5_0.0_8_0.4_0.0_0.0_0.0_sc1  vis_with_gaps.py
logs/old/: dkf_0.5_0.0_8_0.4_0.0_0.0_0.0_sc1  dkf_0.5_0.0_8_0.4_0.0_0.0_0.0_sc2  dkf_0.5_0.0_8_0.4_0.0_0.0_0.0_sc4  dkf_1.0_0.0_8_0.4_0.0_0.0_0.0_sc1  dkf_1.0_0.0_8_0.4_0.0_0.0_0.0_sc4  dkf_1.0_0.0_8_0.4_0.0_0.0_0.0_sc5  dkft_0.5_0.0_8_0.4_0.0_0.0_0.0_sc1  dkft_0.5_0.0_8_0.4_0.0_0.0_0.0_sc2  dkft_0.5_0.0_8_0.4_0.0_0.0_0.0_sc4  dkft_1.0_0.0_8_0.4_0.0_0.0_0.0_sc1  (+18 more)
rviz/: real.rviz  testing.rviz
scripts/: generate_trajectory.py  tan_vs_theta.py  triang.py  visual_tracking.py
src/: Masters.cpp
tmux/: .tmuxinator.yml  rosbag_play.sh  rosbag_session.yaml  session.yml  start.sh  uav_spawn_positions.csv
tmux/config/: spawner.yaml  (+2 more)
